# pjatk-cat-guard

./: .dockerignore  .example.env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANUAL.md  PRIVACY.md  Pipfile  README.md  docker-compose.dev.yml  docker-compose.yml  doomsday.py  doomsdayfix.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: docker-ci.yml
common/: codes.py
discord_janitor/: bot.py  configure.py  services.py  verifing.py
discordcat/: __main__.py  bot.py  checks.py  collections.py  configure.py  embed_factory.py  manage.py  services.py  update.py  verifing.py
discordcat/audit/: commands.py  decorators.py  error_reporting.py
discordcat/commands/: __init__.py  configure.py  findby.py  group.py  manage.py  system.py  verifing.py
discordcat/commands/setup/: bot_init.py
discordcat/decorators/: auditing.py
discordcat/subscribers/: __init__.py  check_user.py  explain.py  interactions.py  new_members.py  reporter.py  starter.py  subscriber.py
discordcat/util/: form.py
docker/gadoneko/: Dockerfile  download_assets.sh
docker/tika/: Dockerfile
doctor/: __init__.py  __main__.py  health.py
gadoneko/: __init__.py  __main__.py  _metadata.py  bot.py  checks.py  cron.py
gadoneko/bot/: __init__.py  __main__.py  _bot.py
gadoneko/components/: admin.py
gadoneko/components/admin/: metrics.py
gadoneko/plugins/: admin.py  altapi.py  auditlog.py  covid.py  devel.py  erroring.py  funny.py  repo.py  tracking.py  trust.py  vision.py
gadoneko/static/: funny.yml
gadoneko/tasks/: __init__.py  app.py
gadoneko/util/: funny.yml  permissions.py  perrmissions.py
shared/: colors.py  consts.py  db.py  documents.py  festive.yml  formatting.py  graphs.py  progressbar.py  tika.py  util.py
static/: funny.yml
tasukuneko/: __init__.py  heart.py  settings.py
templates/: copyright.html  guild-invite.html  guild-invited.html  home.html  login.html  oauth-login.html  report.html  rick.html  upload.html  verified.html
templates/admin/: 403.html  accepted.html  base.html  rejected.html  review.html
toolbox/: doomsday.py  doomsdayfix.py  dump_mongo.py  fixmongo.py
toolbox/mongopatches/: reloadall.py
web_janitor/: __init__.py  __main__.py  verification_gate.py
webgate/: __init__.py  __main__.py  gate.py  invites.py
webgate/endpoints/: general.py  invites.py
webpanel/: __init__.py  admin.py  altapi.py  common.py  panel.py  tasks.py  verify.py
webpanel/endpoints/: admin.py  general.py  invites.py  mailing.py
webpanel/middleware/: auth.py
webpanel/static/: styles.css
webpanel/templates/: 500.html  altapi-conf.html  guild-invite.html  guild-invited.html  home.html  message.html  upload.html  verified.html
webpanel/templates/admin/: 403.html  404.html  500.html  505.html  accepted.html  autodelete.html  base.html  rejected.html  review.html
