[tool.poetry]
name = "gadoneko"
version = "1.6.0"
description = "Just an overegnieered discord bot for students."
authors = ["Krystian Postek <krystian@postek.eu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# Bot related dependencies
hikari = {extras = ["speedups"], version = "^2.0.0-alpha.106"}
hikari-lightbulb = {git = "https://github.com/tandemdude/hikari-lightbulb", branch = "development"}
# Cron related dependencies
celery = "^5.2.3"
# Web related dependencies
starlette = "*"
python-multipart = "*"
jinja2 = "*"
uvicorn = "*"
# Common dependencies
mongoengine = {git = "https://github.com/MongoEngine/mongoengine"}
python-dotenv = "*"
google-api-python-client = "*"
sentry-sdk = "*"
aiohttp = "<4.0.0"
pyyaml = "*"
millify = "*"
itsdangerous = "^2.1.0"
markdownify = "^0.10.1"
plotly = "^5.5.0"
pandas = "^1.3.5"
httpx = "^0.22.0"
Authlib = "^0.15.5"
kaleido = "0.2.1"
sendgrid = "^6.9.5"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
black = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
